k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectnowcdp-report-studio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: projectnowcdp-report-studio
  ports:
    - name: http
      port: 80
      targetPort: http
      appProtocol: http
